--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,12 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-      
+      - uses: actions/checkout@v3
+      - name: Install Python3
+        uses: actions/setup-python@v3
+        with:
+          python-version: 3.9
+               
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
